Re-writing the compress and decompress code. Separating into separate classes to save space and for portibility. Will also make the converter easier to make. Experimental code to check FastFile header and version. Removes the need to give it in the FFXML. Added class to get information on a fastfile.

--- a/ffManager/ffManager.csproj
+++ b/ffManager/ffManager.csproj
@@ -72,12 +72,17 @@
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ffProfile.cs" />
+    <Compile Include="ffInfo.cs" />
+    <Compile Include="compress_xbox.cs" />
+    <Compile Include="decompress_ps3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="offzip.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="packzip.exe" />
+    <None Include="packzip.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
