Added PS3 decompression class. Checks for MW2 as it is the one game that requires diifferent methods to be done. Small bizzar issue that is causing files to be written in the same directory as the program, but I cant get anything written to console that explains why, considering no code does anything related to that.
Once PS3 compression is done and fully tested, xbox won't be hard.
Interesting thing will be the converter...

--- a/ffManager/ffManager.csproj
+++ b/ffManager/ffManager.csproj
@@ -75,6 +75,8 @@
     <Compile Include="ffInfo.cs" />
     <Compile Include="compress_xbox.cs" />
     <Compile Include="decompress_ps3.cs" />
+    <Compile Include="decompress_xbox.cs" />
+    <Compile Include="compress_ps3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
