Few updates and bug fixes. COD4 compression has some issues, but COD5 *seems* to work.

--- a/ffManager.csproj
+++ b/ffManager.csproj
@@ -52,4 +52,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="New Folder\" />
+  </ItemGroup>
 </Project>
