--- a/ffManager.csproj
+++ b/ffManager.csproj
@@ -42,6 +42,8 @@
     <Compile Include="COD4_Compress.cs" />
     <Compile Include="COD5_Decompress.cs" />
     <Compile Include="COD5_Compress.cs" />
+    <Compile Include="MW2_Decompress.cs" />
+    <Compile Include="MW2_Compress.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -51,8 +53,5 @@
     <None Include="packzip.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="New Folder\" />
   </ItemGroup>
 </Project>
